# IVerify

./: .gitignore  pyproject.toml
src/: Popup.py  file.html  frontend.py  main.py
src/chrome-win/: 134.0.6979.0.manifest  chrome_100_percent.pak  chrome_200_percent.pak
src/chrome-win/locales/: af.pak  am.pak  ar-XB.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  en-XA.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  (+17 more)
src/sample/: CompData.xlsx  UAN No. Received from Client.xlsx  UANFName.xlsx
src/sample/in/: CompDat.xlsx  UAN no. With Candidate name and Father name.xlsx  uanacord_uan_member_data_100192005418.xlsx  uanacord_uan_member_data_100316199608.xlsx  uanacord_uan_member_data_101199025319.xlsx  uanacord_uan_member_data_101200664769.xlsx  uanacord_uan_member_data_101263581176.xlsx  uanacord_uan_member_data_101384973205.xlsx  uanacord_uan_member_data_101683067734.xlsx  uanacord_uan_member_data_101714196366.xlsx  uanacord_uan_member_data_101720678369.xlsx  uanacord_uan_member_data_101760355354.xlsx  uanacord_uan_member_data_101770499581.xlsx  uanacord_uan_member_data_101778711107.xlsx  uanacord_uan_member_data_101914185328.xlsx  uanacord_uan_member_data_101966992846.xlsx
