[project]
name = "sunfarmacheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "playwright>=1.18.1",
    "pyhtml2pdf>=0.0.7",
    "pyppeteer>=2.0.0",
    "pywin32>=308",
    "reportlab>=4.2.5",
    "spire-xls>=14.12.0",
    "weasyprint>=63.1",
    "xlsx2html>=0.6.2",
    "xlsx2pdf>=1.0.1",
    "xlsxwriter>=3.2.1",
    "xlwings[all]>=0.33.6",
]
